--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body{
   background:linear-gradient(145deg,rgba(255,255,255,0.85),rgba(240,242,255,0.85));
   backdrop-filter:blur(18px);
   border-radius:30px;
-  box-shadow:0 35px 90px rgba(80,90,160,0.35);
+  box-shadow:0 35px 90px rgba(167, 167, 152, 0.35);
   overflow:hidden;
   animation:fadeIn 1.3s ease;
 }
@@ -37,8 +37,8 @@ body{
   gap:55px;
   align-items:center;
   background:
-    linear-gradient(135deg,#6a7cff,#8e5dff,#c26bff);
-  color:#fff;
+    linear-gradient(135deg,#7e7f8d,#dad7de,#6c6570);
+  color:#363333;
 }
 
 .header img{
@@ -82,7 +82,7 @@ body{
 }
 .social a:hover{
   background:#fff;
-  color:#7b4dff;
+  color:#bab9bb;
   transform:translateY(-4px);
 }
 
@@ -94,7 +94,7 @@ body{
   text-align:center;
   font-size:36px;
   font-weight:600;
-  color:#6a6eff;
+  color:#000000;
   margin-bottom:80px;
   position:relative;
 }
@@ -102,7 +102,7 @@ body{
   content:'';
   width:110px;
   height:5px;
-  background:linear-gradient(90deg,#6a7cff,#c26bff);
+  background:linear-gradient(90deg,#bcbdc4,#828182);
   display:block;
   margin:20px auto 0;
   border-radius:20px;
@@ -120,7 +120,7 @@ body{
   left:50%;
   width:5px;
   height:100%;
-  background:linear-gradient(#6a7cff,#c26bff);
+  background:linear-gradient(#c8cbdb,#59575a);
   transform:translateX(-50%);
 }
 .timeline-item{
@@ -157,7 +157,7 @@ body{
   border-radius:28px;
   overflow:hidden;
   background:linear-gradient(145deg,#ffffff,#eef0ff);
-  box-shadow:0 25px 65px rgba(90,100,200,0.3);
+  box-shadow:0 25px 65px rgba(139, 140, 150, 0.3);
   transition:.45s;
 }
 .achievement-card:hover{
@@ -171,13 +171,13 @@ body{
 .achievement-card div{
   padding:30px;
 }
-.achievement-card h3{color:#6a6eff}
+.achievement-card h3{color:#d1c4b2}
 .achievement-card a{
   display:inline-block;
   margin-top:18px;
   padding:13px 26px;
   border-radius:16px;
-  background:linear-gradient(135deg,#6a7cff,#c26bff);
+  background:linear-gradient(135deg,#919297,#5b585e);
   color:white;
   text-decoration:none;
   font-size:14px;
@@ -193,7 +193,7 @@ body{
   background:linear-gradient(145deg,#ffffff,#f1f2ff);
   padding:30px 34px;
   border-radius:22px;
-  box-shadow:0 18px 45px rgba(90,100,200,0.25);
+  box-shadow:0 18px 45px rgba(199, 184, 147, 0.25);
   display:flex;
   gap:18px;
   align-items:flex-start;
@@ -206,7 +206,7 @@ body{
   font-size:32px;
 }
 .badge strong{
-  color:#6a6eff;
+  color:#90909f;
 }
 
 /* ANIMATION */
@@ -234,13 +234,18 @@ body{
     <h1>Salwa Sabrina Putri Wijaya</h1>
     <h3>Outstanding Student | Academic Achiever</h3>
     <p>
-      Pelajar berprestasi dengan pencapaian akademik dan non-akademik yang konsisten sejak SD hingga SMA,
-      aktif dalam kompetisi tingkat kabupaten, provinsi, hingga nasional.
+      Saya memiliki minat yang besar dalam bidang ilmu sosial, terutama sejarah dan ekonomi.  
+        Ketertarikan saya terhadap dinamika sosial membuat saya senang mempelajari hubungan antar manusia dan masyarakat.  
+        Selain itu, saya juga menyukai bahasa Inggris dan pernah mengikuti berbagai kompetisi seperti speech dan story telling.  
+        Pengalaman tersebut membantu saya meningkatkan kepercayaan diri dan kemampuan berkomunikasi.  
+        Saya percaya bahwa kemampuan bahasa merupakan kunci untuk memahami dunia yang lebih luas.  
+        Dalam hal belajar, saya adalah pribadi yang ambisius dan selalu ingin mengetahui lebih dalam tentang sesuatu yang saya pelajari.  
+        Saya juga memiliki dedikasi tinggi untuk mencapai tujuan dan tidak mudah menyerah dalam menghadapi tantangan.  
+        Dengan semangat dan konsistensi, saya yakin setiap proses akan membuahkan hasil yang terbaik.
     </p>
     <div class="social">
       <a href="https://www.instagram.com/salwasbrna25">Instagram</a>
       <a href="mailto:salwabdj3@gmail.com">Email</a>
-      <a href="https://drive.google.com">Google Drive</a>
     </div>
   </div>
 </div>
@@ -272,26 +277,26 @@ body{
 <div class="section-title">Dokumentasi Prestasi</div>
 <div class="achievement-grid">
   <div class="achievement-card">
-    <img src="sd.jpg">
-    <div><h3>Prestasi SD</h3><a href="#">📂 Google Drive</a></div>
+    <img src="sd.jpeg">
+    <div><h3>Prestasi SD</h3><a href="https://drive.google.com/drive/folders/1OBFBUbfJsKT8uTTXgo-78Egc6ZYVtaRu">📂 Google Drive</a></div>
   </div>
   <div class="achievement-card">
-    <img src="smp.jpg">
-    <div><h3>Prestasi SMP</h3><a href="#">📂 Google Drive</a></div>
+    <img src="smp.jpeg">
+    <div><h3>Prestasi SMP</h3><a href="https://drive.google.com/drive/folders/1D3muKpdanVUy6Ad9jE0YedmziNVG-JEo">📂 Google Drive</a></div>
   </div>
   <div class="achievement-card">
-    <img src="sma.jpg">
-    <div><h3>Prestasi SMA</h3><a href="#">📂 Google Drive</a></div>
+    <img src="sma.jpeg">
+    <div><h3>Prestasi SMA</h3><a href="https://drive.google.com/drive/folders/1SQZQZKi6rqcF1lW_uKXuagyICBA3do-2">📂 Google Drive</a></div>
   </div>
 </div>
 
 <div class="section-title">Pencapaian Unggulan</div>
 <div class="badge-grid">
-  <div class="badge"><span>🥇</span><div><strong>Medali Emas</strong><br>Olimpiade Bahasa Inggris</div></div>
-  <div class="badge"><span>🥈</span><div><strong>Medali Perak</strong><br>Geografi & Bahasa Inggris</div></div>
-  <div class="badge"><span>🏆</span><div><strong>Peringkat 1 Umum</strong><br>Konsisten sejak SD</div></div>
+  <div class="badge"><span>🥇</span><div><strong>Medali Emas</strong><br>Olimpiade Bahasa Inggris Dignity</div></div>
+  <div class="badge"><span>🥈</span><div><strong>Medali Perak</strong><br>Olimpiade Geografi Dignity & Olimpiade Bahasa Inggris Airlangga Youth Championship</div></div>
+  <div class="badge"><span>🏆</span><div><strong>Peringkat Umum</strong><br>Konsisten sejak SD</div></div>
   <div class="badge"><span>🎤</span><div><strong>Speech Nasional</strong></div></div>
-  <div class="badge"><span>🌍</span><div><strong>OSN Geografi</strong><br>Tingkat Provinsi</div></div>
+  <div class="badge"><span>🌍</span><div><strong>OSN Geografi dan KImia</strong><br> Tingkat Kabupaten</div></div>
   <div class="badge"><span>💼</span><div><strong>Wakil Bendahara OSIS</strong><br>2023–2024</div></div>
 </div>
 
